--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -459,7 +459,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x5fa47b5c3d90&gt;
+## &lt;environment: 0x5820bcad0c70&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
@@ -510,8 +510,8 @@ with the Weibull model transitioning between them to form dome-like
 surfaces depending on its <span
 class="math inline">\(\textbf{shape}\)</span> parameter.</p>
 </div>
-<div id="assigning-decay-to-vertices" class="section level1">
-<h1>Assigning decay to vertices</h1>
+<div id="assigning-a-decay-model" class="section level1">
+<h1>Assigning a decay model</h1>
 <p>Returning to our lattice example, next we assign a linear decay model
 to the <em>PathwaySpace</em> object, setting <span
 class="math inline">\(\textbf{pdist}\)</span> as the average
