--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -459,7 +459,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x5a5dd388eca0&gt;
+## &lt;environment: 0x5901b7abd8e0&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
