--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -392,6 +392,19 @@ transcriptomics</strong></a> data.</p>
 </div>
 <div id="setting-basic-input-data" class="section level1">
 <h1>Setting basic input data</h1>
+<pre class="r"><code># PathwaySpace &gt;= 1.0.3 is required for this vignette
+if (!require(&quot;remotes&quot;, quietly = TRUE)){
+  install.packages(&quot;remotes&quot;)
+}
+if (!require(&quot;PathwaySpace&quot;, quietly = TRUE)){
+  remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
+}
+if (!require(&quot;SpotSpace&quot;, quietly = TRUE)){
+  remotes::install_github(&quot;sysbiolab/SpotSpace&quot;)
+}
+if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.0.3&quot;){
+  message(&quot;you need to update &#39;PathwaySpace&#39; for this vignette&quot;)
+}</code></pre>
 <pre class="r"><code>#--- Load required packages for this section
 library(igraph)
 library(ggplot2)
@@ -459,7 +472,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x5901b7abd8e0&gt;
+## &lt;environment: 0x5e2540f110a0&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
@@ -573,8 +586,8 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] patchwork_1.3.2    SpotSpace_0.0.1    PathwaySpace_1.0.3 RGraphSpace_1.1.0 
-## [5] ggplot2_3.5.2.9001 igraph_2.1.4       bs4cards_0.1.1    
+## [1] patchwork_1.3.2    igraph_2.1.4       SpotSpace_0.0.1    PathwaySpace_1.0.3
+## [5] RGraphSpace_1.1.0  ggplot2_3.5.2.9001 remotes_2.5.0      bs4cards_0.1.1    
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
@@ -588,7 +601,7 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ##  [25] goftest_1.2-3          later_1.4.4            spatstat.utils_3.1-5  
 ##  [28] irlba_2.3.5.1          parallel_4.5.1         cluster_2.1.8.1       
 ##  [31] R6_2.6.1               ica_1.0-3              spatstat.data_3.1-8   
-##  [34] bslib_0.9.0            stringi_1.8.7          RColorBrewer_1.1-3    
+##  [34] stringi_1.8.7          bslib_0.9.0            RColorBrewer_1.1-3    
 ##  [37] reticulate_1.43.0      spatstat.univar_3.1-4  parallelly_1.45.1     
 ##  [40] lmtest_0.9-40          jquerylib_0.1.4        scattermore_1.2       
 ##  [43] Rcpp_1.1.0             knitr_1.50             tensor_1.5.1          
