--- a/install.html
+++ b/install.html
@@ -10,11 +10,11 @@
 
 
 
-<meta name="date" content="2025-10-15" />
+<meta name="date" content="2025-10-16" />
 
 <title>Installation Instructions</title>
 
-<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.30/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <link href="site_libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet" />
@@ -294,7 +294,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Installation Instructions</h1>
-<h4 class="date">2025-10-15</h4>
+<h4 class="date">2025-10-16</h4>
 
 </div>
 
@@ -323,6 +323,7 @@ remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;, build_vignettes=TRUE
 remotes::install_github(&quot;sysbiolab/SpotSpace&quot;, build_vignettes=TRUE)
 
 # Data package used in the SpotSpace vignette
+remotes::install_github(&quot;satijalab/Seurat&quot;)
 remotes::install_github(&quot;satijalab/seurat-data&quot;)</code></pre>
 </div>
 <div id="citation" class="section level2">
