--- a/projection-methods.html
+++ b/projection-methods.html
@@ -11,11 +11,11 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-15" />
+<meta name="date" content="2025-10-16" />
 
 <title>Network signal projections</title>
 
-<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.30/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <link href="site_libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet" />
@@ -374,33 +374,42 @@ div.tocify {
 <h3 class="subtitle">A guided tutorial on <em>PathwaySpace</em>
 projection methods</h3>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-15</h4>
+<h4 class="date">2025-10-16</h4>
 
 </div>
 
 
-<p><strong>Package</strong>: PathwaySpace 1.0.3 <br/></p>
+<p><strong>Package</strong>: PathwaySpace 1.0.3.1 <br/></p>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p>In this tutorial, you’ll get to know the main <em>PathwaySpace</em>
-methods through simple toy examples. We’ll walk through how to set up
-basic input data and run graph projections. These examples are designed
-to give users a feel for the core workflow before diving into larger or
+<p>This tutorial introduces the core <em>PathwaySpace</em> methods using
+simple toy examples. We will walk through setting up basic input data
+and running graph projections. These examples are designed to
+familiarize users with the core workflow before they work with larger,
 real-world datasets.</p>
 </div>
 <div id="setting-basic-input-data" class="section level1">
 <h1>Setting basic input data</h1>
-<pre class="r"><code># PathwaySpace &gt;= 1.0.3 is required for this vignette
+<pre class="r"><code># Check required packages for this vignette
 if (!require(&quot;remotes&quot;, quietly = TRUE)){
   install.packages(&quot;remotes&quot;)
 }
+if (!require(&quot;RGraphSpace&quot;, quietly = TRUE)){
+  remotes::install_github(&quot;sysbiolab/RGraphSpace&quot;)
+}
 if (!require(&quot;PathwaySpace&quot;, quietly = TRUE)){
   remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
-}
-if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.0.3&quot;){
-  message(&quot;you need to update &#39;PathwaySpace&#39; for this vignette&quot;)
 }</code></pre>
-<pre class="r"><code>#--- Load required packages for this section
+<pre class="r"><code># Check required versions
+if (packageVersion(&quot;RGraphSpace&quot;) &lt; &quot;1.1.0&quot;){
+  message(&quot;Need to update &#39;RGraphSpace&#39; for this vignette&quot;)
+  remotes::install_github(&quot;sysbiolab/RGraphSpace&quot;)
+}
+if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.0.3.1&quot;){
+  message(&quot;Need to update &#39;PathwaySpace&#39; for this vignette&quot;)
+  remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
+}</code></pre>
+<pre class="r"><code>#--- Load required packages
 library(igraph)
 library(ggplot2)
 library(RGraphSpace)
@@ -653,19 +662,20 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] patchwork_1.3.2    igraph_2.1.4       SpotSpace_0.0.1    PathwaySpace_1.0.3
-## [5] RGraphSpace_1.1.0  ggplot2_3.5.2.9001 remotes_2.5.0      bs4cards_0.1.1    
+## [1] patchwork_1.3.2      igraph_2.2.0         SpotSpace_0.0.2     
+## [4] PathwaySpace_1.0.3.1 RGraphSpace_1.1.0    ggplot2_4.0.0.9000  
+## [7] remotes_2.5.0        bs4cards_0.1.1      
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
 ##   [4] rlang_1.1.6            magrittr_2.0.4         RcppAnnoy_0.0.22      
-##   [7] spatstat.geom_3.5-0    matrixStats_1.5.0      ggridges_0.5.7        
+##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
 ##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
 ##  [13] reshape2_1.4.4         stringr_1.5.2          pkgconfig_2.0.3       
 ##  [16] fastmap_1.2.0          labeling_0.4.3         fontawesome_0.5.3     
-##  [19] promises_1.3.3         rmarkdown_2.29         purrr_1.1.0           
+##  [19] promises_1.3.3         rmarkdown_2.30         purrr_1.1.0           
 ##  [22] xfun_0.53              cachem_1.1.0           jsonlite_2.0.0        
-##  [25] goftest_1.2-3          later_1.4.4            spatstat.utils_3.1-5  
+##  [25] goftest_1.2-3          later_1.4.4            spatstat.utils_3.2-0  
 ##  [28] irlba_2.3.5.1          parallel_4.5.1         cluster_2.1.8.1       
 ##  [31] R6_2.6.1               ica_1.0-3              spatstat.data_3.1-8   
 ##  [34] stringi_1.8.7          bslib_0.9.0            RColorBrewer_1.1-3    
@@ -675,14 +685,14 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ##  [46] future.apply_1.20.0    zoo_1.8-14             sctransform_0.4.2     
 ##  [49] httpuv_1.6.16          Matrix_1.7-4           splines_4.5.1         
 ##  [52] tidyselect_1.2.1       abind_1.4-8            rstudioapi_0.17.1     
-##  [55] yaml_2.3.10            spatstat.random_3.4-1  spatstat.explore_3.5-2
+##  [55] yaml_2.3.10            spatstat.random_3.4-2  spatstat.explore_3.5-3
 ##  [58] codetools_0.2-20       miniUI_0.1.2           listenv_0.9.1         
 ##  [61] lattice_0.22-5         tibble_3.3.0           plyr_1.8.9            
 ##  [64] shiny_1.11.1           withr_3.0.2            S7_0.2.0              
 ##  [67] ROCR_1.0-11            evaluate_1.0.5         Rtsne_0.17            
 ##  [70] future_1.67.0          fastDummies_1.7.5      survival_3.8-3        
-##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.0         
-##  [76] Seurat_5.3.1.0000      KernSmooth_2.23-26     plotly_4.11.0         
+##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.1         
+##  [76] Seurat_5.3.1.9999      KernSmooth_2.23-26     plotly_4.11.0         
 ##  [79] generics_0.1.4         RcppHNSW_0.6.0         sp_2.2-0              
 ##  [82] scales_1.4.0           globals_0.18.0         xtable_1.8-4          
 ##  [85] glue_1.8.0             lazyeval_0.2.2         tools_4.5.1           
@@ -692,7 +702,7 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ##  [97] cli_3.6.5              spatstat.sparse_3.1-0  spam_2.11-1           
 ## [100] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
 ## [103] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
-## [106] progressr_0.15.1       ggrepel_0.9.6          htmlwidgets_1.6.4     
+## [106] progressr_0.17.0       ggrepel_0.9.6          htmlwidgets_1.6.4     
 ## [109] SeuratObject_5.2.0     farver_2.1.2           htmltools_0.5.8.1     
 ## [112] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
 ## [115] MASS_7.3-65</code></pre>
