--- a/projection-methods.html
+++ b/projection-methods.html
@@ -388,8 +388,8 @@ and running graph projections. These examples are designed to
 familiarize users with the core workflow before they work with larger,
 real-world datasets.</p>
 </div>
-<div id="setting-basic-input-data" class="section level1">
-<h1>Setting basic input data</h1>
+<div id="required-packages" class="section level1">
+<h1>Required packages</h1>
 <pre class="r"><code># Check required packages for this vignette
 if (!require(&quot;remotes&quot;, quietly = TRUE)){
   install.packages(&quot;remotes&quot;)
@@ -400,7 +400,7 @@ if (!require(&quot;RGraphSpace&quot;, quietly = TRUE)){
 if (!require(&quot;PathwaySpace&quot;, quietly = TRUE)){
   remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
 }</code></pre>
-<pre class="r"><code># Check required versions
+<pre class="r"><code># Check versions
 if (packageVersion(&quot;RGraphSpace&quot;) &lt; &quot;1.1.0&quot;){
   message(&quot;Need to update &#39;RGraphSpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/RGraphSpace&quot;)
@@ -409,11 +409,14 @@ if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.0.3.1&quot;){
   message(&quot;Need to update &#39;PathwaySpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
 }</code></pre>
-<pre class="r"><code>#--- Load required packages
+<pre class="r"><code># Load packages
 library(igraph)
 library(ggplot2)
 library(RGraphSpace)
 library(PathwaySpace)</code></pre>
+</div>
+<div id="setting-basic-input-data" class="section level1">
+<h1>Setting basic input data</h1>
 <p>This section will create an <em>igraph</em> object containing a
 binary signal associated to each vertex. The graph layout is configured
 manually to ensure that users can easily view all the relevant arguments
