--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -486,7 +486,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x5877c0d05c08&gt;
+## &lt;environment: 0x6430b0f62630&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
