--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-16" />
+<meta name="date" content="2025-10-17" />
 
 <title>Modeling signal decay functions</title>
 
@@ -372,7 +372,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Modeling signal decay functions</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-16</h4>
+<h4 class="date">2025-10-17</h4>
 
 </div>
 
@@ -486,7 +486,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x6430b0f62630&gt;
+## &lt;environment: 0x5ae3e39197a0&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
