--- a/install.html
+++ b/install.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-10-18" />
+<meta name="date" content="2025-10-20" />
 
 <title>Installation Instructions</title>
 
@@ -294,7 +294,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Installation Instructions</h1>
-<h4 class="date">2025-10-18</h4>
+<h4 class="date">2025-10-20</h4>
 
 </div>
 
@@ -315,14 +315,12 @@ install.packages(&quot;remotes&quot;)
 
 # Main packages
 remotes::install_github(&quot;sysbiolab/RGraphSpace&quot;, build_vignettes=TRUE)
-remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;, build_vignettes=TRUE)</code></pre>
-</div>
-<div id="extension" class="section level2">
-<h2>Extension</h2>
-<pre class="r"><code># The SpotSpace package extends PathwaySpace for spatial transcriptomics
+remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;, build_vignettes=TRUE)
+
+# Extension for spatial transcriptomics
 remotes::install_github(&quot;sysbiolab/SpotSpace&quot;, build_vignettes=TRUE)
 
-# Data package used in the SpotSpace vignette
+# Dependencies used in the extension
 remotes::install_github(&quot;satijalab/Seurat&quot;)
 remotes::install_github(&quot;satijalab/seurat-data&quot;)</code></pre>
 </div>
