--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-18" />
+<meta name="date" content="2025-10-21" />
 
 <title>Modeling signal decay functions</title>
 
@@ -372,7 +372,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Modeling signal decay functions</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-18</h4>
+<h4 class="date">2025-10-21</h4>
 
 </div>
 
@@ -486,7 +486,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x60fd9e7f98c0&gt;
+## &lt;environment: 0x61ad4f6ceb38&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
@@ -494,13 +494,13 @@ returns a decay function with customized parameters.</p>
 attenuation, rerun the <code>weibullDecay()</code> constructor with
 <code>plot = TRUE</code>.</p>
 <pre class="r"><code># Run Weibull constructor with decay = 0.5, shape = 1, and pdist = 0.25
-p1 &lt;- weibullDecay(decay = 0.5, shape = 1, pdist = 0.25, plot = TRUE)
+p1 &lt;- weibullDecay(decay = 0.4, shape = 1, pdist = 0.2, plot = TRUE)
 
 # Run Weibull constructor with decay = 0.5, shape = 2, and pdist = 0.50
-p2 &lt;- weibullDecay(decay = 0.5, shape = 2, pdist = 0.50, plot = TRUE)
+p2 &lt;- weibullDecay(decay = 0.4, shape = 2, pdist = 0.4, plot = TRUE)
 
 # Run Weibull constructor with decay = 0.25, shape = 3, and pdist = 0.75
-p3 &lt;- weibullDecay(decay = 0.25, shape = 4, pdist = 0.75, plot = TRUE)
+p3 &lt;- weibullDecay(decay = 0.2, shape = 4, pdist = 0.8, plot = TRUE)
 
 p1 + p2 + p3</code></pre>
 <p><img src="modeling-signal-decay_files/figure-html/Creating%20a%20decay%20function%20-%204.2-1.png" width="100%" /></p>
@@ -522,7 +522,7 @@ increasingly sigmoidal.</p>
 p1 &lt;- expDecay(decay = 0.4, pdist = 0.2, plot = TRUE)
 
 # Run the linearDecay constructor with decay = 0.5,and pdist = 0.25
-p2 &lt;- linearDecay(decay = 0.5, pdist = 0.25, plot = TRUE)
+p2 &lt;- linearDecay(decay = 0.4, pdist = 0.3, plot = TRUE)
 
 p1 + p2</code></pre>
 <p><img src="modeling-signal-decay_files/figure-html/Creating%20a%20decay%20function%20-%204.3-1.png" width="100%" /></p>
@@ -602,7 +602,7 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ## other attached packages:
 ## [1] patchwork_1.3.2      igraph_2.2.0         SpotSpace_0.0.2     
 ## [4] PathwaySpace_1.0.3.1 RGraphSpace_1.1.0    ggplot2_4.0.0.9000  
-## [7] remotes_2.5.0        bs4cards_0.1.1      
+## [7] remotes_2.5.0       
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
@@ -610,40 +610,39 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
 ##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
 ##  [13] reshape2_1.4.4         stringr_1.5.2          pkgconfig_2.0.3       
-##  [16] fastmap_1.2.0          labeling_0.4.3         fontawesome_0.5.3     
-##  [19] promises_1.3.3         rmarkdown_2.30         purrr_1.1.0           
-##  [22] xfun_0.53              cachem_1.1.0           jsonlite_2.0.0        
-##  [25] goftest_1.2-3          later_1.4.4            spatstat.utils_3.2-0  
-##  [28] irlba_2.3.5.1          parallel_4.5.1         cluster_2.1.8.1       
-##  [31] R6_2.6.1               ica_1.0-3              spatstat.data_3.1-8   
-##  [34] stringi_1.8.7          bslib_0.9.0            RColorBrewer_1.1-3    
-##  [37] reticulate_1.43.0      spatstat.univar_3.1-4  parallelly_1.45.1     
-##  [40] lmtest_0.9-40          jquerylib_0.1.4        scattermore_1.2       
-##  [43] Rcpp_1.1.0             knitr_1.50             tensor_1.5.1          
-##  [46] future.apply_1.20.0    zoo_1.8-14             sctransform_0.4.2     
-##  [49] httpuv_1.6.16          Matrix_1.7-4           splines_4.5.1         
-##  [52] tidyselect_1.2.1       abind_1.4-8            rstudioapi_0.17.1     
-##  [55] yaml_2.3.10            spatstat.random_3.4-2  spatstat.explore_3.5-3
-##  [58] codetools_0.2-20       miniUI_0.1.2           listenv_0.9.1         
-##  [61] lattice_0.22-5         tibble_3.3.0           plyr_1.8.9            
-##  [64] shiny_1.11.1           withr_3.0.2            S7_0.2.0              
-##  [67] ROCR_1.0-11            evaluate_1.0.5         Rtsne_0.17            
-##  [70] future_1.67.0          fastDummies_1.7.5      survival_3.8-3        
-##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.1         
-##  [76] Seurat_5.3.1.9999      KernSmooth_2.23-26     plotly_4.11.0         
-##  [79] generics_0.1.4         RcppHNSW_0.6.0         sp_2.2-0              
-##  [82] scales_1.4.0           globals_0.18.0         xtable_1.8-4          
-##  [85] glue_1.8.0             lazyeval_0.2.2         tools_4.5.1           
-##  [88] data.table_1.17.8      RSpectra_0.16-2        RANN_2.6.2            
-##  [91] fs_1.6.6               dotCall64_1.2          cowplot_1.2.0         
-##  [94] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
-##  [97] cli_3.6.5              spatstat.sparse_3.1-0  spam_2.11-1           
-## [100] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
-## [103] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
-## [106] progressr_0.17.0       ggrepel_0.9.6          htmlwidgets_1.6.4     
-## [109] SeuratObject_5.2.0     farver_2.1.2           htmltools_0.5.8.1     
-## [112] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
-## [115] MASS_7.3-65</code></pre>
+##  [16] fastmap_1.2.0          promises_1.3.3         rmarkdown_2.30        
+##  [19] purrr_1.1.0            xfun_0.53              cachem_1.1.0          
+##  [22] jsonlite_2.0.0         goftest_1.2-3          later_1.4.4           
+##  [25] spatstat.utils_3.2-0   irlba_2.3.5.1          parallel_4.5.1        
+##  [28] cluster_2.1.8.1        R6_2.6.1               ica_1.0-3             
+##  [31] spatstat.data_3.1-8    bslib_0.9.0            stringi_1.8.7         
+##  [34] RColorBrewer_1.1-3     reticulate_1.43.0      spatstat.univar_3.1-4 
+##  [37] parallelly_1.45.1      lmtest_0.9-40          jquerylib_0.1.4       
+##  [40] scattermore_1.2        Rcpp_1.1.0             knitr_1.50            
+##  [43] tensor_1.5.1           future.apply_1.20.0    zoo_1.8-14            
+##  [46] sctransform_0.4.2      httpuv_1.6.16          Matrix_1.7-4          
+##  [49] splines_4.5.1          tidyselect_1.2.1       abind_1.4-8           
+##  [52] rstudioapi_0.17.1      yaml_2.3.10            spatstat.random_3.4-2 
+##  [55] codetools_0.2-20       miniUI_0.1.2           spatstat.explore_3.5-3
+##  [58] listenv_0.9.1          lattice_0.22-5         tibble_3.3.0          
+##  [61] plyr_1.8.9             shiny_1.11.1           withr_3.0.2           
+##  [64] S7_0.2.0               ROCR_1.0-11            evaluate_1.0.5        
+##  [67] Rtsne_0.17             future_1.67.0          fastDummies_1.7.5     
+##  [70] survival_3.8-3         polyclip_1.10-7        fitdistrplus_1.2-4    
+##  [73] pillar_1.11.1          Seurat_5.3.1.9999      KernSmooth_2.23-26    
+##  [76] plotly_4.11.0          generics_0.1.4         RcppHNSW_0.6.0        
+##  [79] sp_2.2-0               scales_1.4.0           globals_0.18.0        
+##  [82] xtable_1.8-4           glue_1.8.0             lazyeval_0.2.2        
+##  [85] tools_4.5.1            data.table_1.17.8      RSpectra_0.16-2       
+##  [88] RANN_2.6.2             dotCall64_1.2          cowplot_1.2.0         
+##  [91] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
+##  [94] cli_3.6.5              spatstat.sparse_3.1-0  spam_2.11-1           
+##  [97] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
+## [100] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
+## [103] progressr_0.17.0       ggrepel_0.9.6          htmlwidgets_1.6.4     
+## [106] SeuratObject_5.2.0     farver_2.1.2           htmltools_0.5.8.1     
+## [109] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
+## [112] MASS_7.3-65</code></pre>
 </div>
 
 
