--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -486,7 +486,7 @@ returns a decay function with customized parameters.</p>
 ##     y &lt;- signal * 0.25^((x/0.75)^2)
 ##     return(y)
 ## }
-## &lt;environment: 0x61ad4f6ceb38&gt;
+## &lt;environment: 0x60088e39c550&gt;
 ## attr(,&quot;name&quot;)
 ## [1] &quot;weibullDecay&quot;</code></pre>
 <p></br></p>
@@ -602,7 +602,7 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ## other attached packages:
 ## [1] patchwork_1.3.2      igraph_2.2.0         SpotSpace_0.0.2     
 ## [4] PathwaySpace_1.0.3.1 RGraphSpace_1.1.0    ggplot2_4.0.0.9000  
-## [7] remotes_2.5.0       
+## [7] remotes_2.5.0        bs4cards_0.1.1      
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
@@ -610,39 +610,39 @@ plotPathwaySpace(ps, marks = &quot;n34&quot;)</code></pre>
 ##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
 ##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
 ##  [13] reshape2_1.4.4         stringr_1.5.2          pkgconfig_2.0.3       
-##  [16] fastmap_1.2.0          promises_1.3.3         rmarkdown_2.30        
-##  [19] purrr_1.1.0            xfun_0.53              cachem_1.1.0          
-##  [22] jsonlite_2.0.0         goftest_1.2-3          later_1.4.4           
-##  [25] spatstat.utils_3.2-0   irlba_2.3.5.1          parallel_4.5.1        
-##  [28] cluster_2.1.8.1        R6_2.6.1               ica_1.0-3             
-##  [31] spatstat.data_3.1-8    bslib_0.9.0            stringi_1.8.7         
-##  [34] RColorBrewer_1.1-3     reticulate_1.43.0      spatstat.univar_3.1-4 
-##  [37] parallelly_1.45.1      lmtest_0.9-40          jquerylib_0.1.4       
-##  [40] scattermore_1.2        Rcpp_1.1.0             knitr_1.50            
-##  [43] tensor_1.5.1           future.apply_1.20.0    zoo_1.8-14            
-##  [46] sctransform_0.4.2      httpuv_1.6.16          Matrix_1.7-4          
-##  [49] splines_4.5.1          tidyselect_1.2.1       abind_1.4-8           
-##  [52] rstudioapi_0.17.1      yaml_2.3.10            spatstat.random_3.4-2 
-##  [55] codetools_0.2-20       miniUI_0.1.2           spatstat.explore_3.5-3
-##  [58] listenv_0.9.1          lattice_0.22-5         tibble_3.3.0          
-##  [61] plyr_1.8.9             shiny_1.11.1           withr_3.0.2           
-##  [64] S7_0.2.0               ROCR_1.0-11            evaluate_1.0.5        
-##  [67] Rtsne_0.17             future_1.67.0          fastDummies_1.7.5     
-##  [70] survival_3.8-3         polyclip_1.10-7        fitdistrplus_1.2-4    
-##  [73] pillar_1.11.1          Seurat_5.3.1.9999      KernSmooth_2.23-26    
-##  [76] plotly_4.11.0          generics_0.1.4         RcppHNSW_0.6.0        
-##  [79] sp_2.2-0               scales_1.4.0           globals_0.18.0        
-##  [82] xtable_1.8-4           glue_1.8.0             lazyeval_0.2.2        
-##  [85] tools_4.5.1            data.table_1.17.8      RSpectra_0.16-2       
-##  [88] RANN_2.6.2             dotCall64_1.2          cowplot_1.2.0         
-##  [91] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
-##  [94] cli_3.6.5              spatstat.sparse_3.1-0  spam_2.11-1           
-##  [97] viridisLite_0.4.2      dplyr_1.1.4            uwot_0.2.3            
-## [100] gtable_0.3.6           sass_0.4.10            digest_0.6.37         
-## [103] progressr_0.17.0       ggrepel_0.9.6          htmlwidgets_1.6.4     
-## [106] SeuratObject_5.2.0     farver_2.1.2           htmltools_0.5.8.1     
-## [109] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
-## [112] MASS_7.3-65</code></pre>
+##  [16] fastmap_1.2.0          fontawesome_0.5.3      promises_1.3.3        
+##  [19] rmarkdown_2.30         purrr_1.1.0            xfun_0.53             
+##  [22] cachem_1.1.0           jsonlite_2.0.0         goftest_1.2-3         
+##  [25] later_1.4.4            spatstat.utils_3.2-0   irlba_2.3.5.1         
+##  [28] parallel_4.5.1         cluster_2.1.8.1        R6_2.6.1              
+##  [31] ica_1.0-3              spatstat.data_3.1-8    stringi_1.8.7         
+##  [34] bslib_0.9.0            RColorBrewer_1.1-3     reticulate_1.43.0     
+##  [37] spatstat.univar_3.1-4  parallelly_1.45.1      lmtest_0.9-40         
+##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
+##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
+##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
+##  [49] Matrix_1.7-4           splines_4.5.1          tidyselect_1.2.1      
+##  [52] abind_1.4-8            rstudioapi_0.17.1      yaml_2.3.10           
+##  [55] spatstat.random_3.4-2  spatstat.explore_3.5-3 codetools_0.2-20      
+##  [58] miniUI_0.1.2           listenv_0.9.1          lattice_0.22-5        
+##  [61] tibble_3.3.0           plyr_1.8.9             shiny_1.11.1          
+##  [64] withr_3.0.2            S7_0.2.0               ROCR_1.0-11           
+##  [67] evaluate_1.0.5         Rtsne_0.17             future_1.67.0         
+##  [70] fastDummies_1.7.5      survival_3.8-3         polyclip_1.10-7       
+##  [73] fitdistrplus_1.2-4     pillar_1.11.1          Seurat_5.3.1.9999     
+##  [76] KernSmooth_2.23-26     plotly_4.11.0          generics_0.1.4        
+##  [79] RcppHNSW_0.6.0         sp_2.2-0               scales_1.4.0          
+##  [82] globals_0.18.0         xtable_1.8-4           glue_1.8.0            
+##  [85] lazyeval_0.2.2         tools_4.5.1            data.table_1.17.8     
+##  [88] RSpectra_0.16-2        RANN_2.6.2             fs_1.6.6              
+##  [91] dotCall64_1.2          cowplot_1.2.0          grid_4.5.1            
+##  [94] tidyr_1.3.1            nlme_3.1-168           cli_3.6.5             
+##  [97] spatstat.sparse_3.1-0  spam_2.11-1            viridisLite_0.4.2     
+## [100] dplyr_1.1.4            uwot_0.2.3             gtable_0.3.6          
+## [103] sass_0.4.10            digest_0.6.37          progressr_0.17.0      
+## [106] ggrepel_0.9.6          htmlwidgets_1.6.4      SeuratObject_5.2.0    
+## [109] farver_2.1.2           htmltools_0.5.8.1      lifecycle_1.0.4       
+## [112] httr_1.4.7             mime_0.13              MASS_7.3-65</code></pre>
 </div>
 
 
